need help fix nav spacing added new fonts/colors/fixed read

--- a/source/css/create-recipe.css
+++ b/source/css/create-recipe.css
@@ -13,6 +13,7 @@ label {
 }
 
 h2 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
   font-size: 44px;
   font-weight: bold;
