--- a/source/css/main.css
+++ b/source/css/main.css
@@ -10,13 +10,22 @@ body {
   --text-color: #123;
   --hover-color: rgb(48, 46, 46);
   --item-color: #666;
+  --card-bg-color:#fff;
+  --card-shadow-color:#939697;
+  --is-solid:solid;
+  --border-color:black;
 }
 
 :root.dark {
+  --card-shadow-color:rgb(177, 177, 177);
   --bg-color: #121212;
   --text-color: #86c7a7;
   --hover-color: #fff;
   --item-color: rgb(175, 174, 174);
+  --card-bg-color:#2c2929;
+  --is-solid:solid;
+  --border-color:rgb(175, 174, 174);
+
 }
 
 body {
@@ -47,20 +56,6 @@ body {
 
 .dark .theme-btn.light {
   display: block;
-}
-:root,
-:root.light {
-  --bg-color: #fff;
-  --text-color: #123;
-  --hover-color: rgb(48, 46, 46);
-  --item-color: #666;
-}
-
-:root.dark {
-  --bg-color: #121212;
-  --text-color: #86c7a7;
-  --hover-color: #fff;
-  --item-color: rgb(175, 174, 174);
 }
 
 body {
@@ -121,6 +116,7 @@ header button {
 }
 .navbar-link a {
   color: var(--item-color);
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-decoration: none;
   font-size: 32px;
   text-align: center;
@@ -150,11 +146,14 @@ header button {
   outline: none;
   border: 5px solid #cee9e2;
 }
-
+.title-div p {
+  font-family:'Franklin Gothic Medium';
+}
 #page-title {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
   padding-top: 30px;
-  font-size: 44px;
+  font-size: 60px;
   font-weight: bold;
 }
 
